--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <div class="container">
     <div class="profile">
+      <!-- Profile Picture -->
       <img src="Jean_de_la_croix.jpg" alt="Jean de la croix ISHIMIRWE" class="profile-pic">
+      
       <h1>Jean de la croix ISHIMIRWE</h1>
       <p class="subtitle">Student at Adventist University of Central Africa</p>
       <p class="study">Networks and Communication Systems</p>
